--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
-h1 {
-  color: SeaGreen;
-  font-style: italic;
+main {
+  margin-left: 15%;
+  margin-right: 15%;
+
+  text-align: justify;
 }
 
 p, li {
@@ -9,7 +11,10 @@ p, li {
 
 a {
   text-decoration: none;
+  color: #aaa;
 }
+
+
 
 
 /* header formatting */
@@ -19,5 +24,37 @@ header {
 }
 
 #nameHeader {
-  float: left;
+  text-align: center;
+}
+
+#name {
+  text-transform: uppercase;
+}
+
+
+
+
+nav {
+  background: #fff;
+}
+
+nav ul {
+  list-style: none;
+  text-align: center;
+  padding: 20px 0px 20px 0px;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 0px 40px;
+  margin: 0px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+nav ul li a:hover {
+  color: #555;
 }
